vzctl: report CT config saving error
The return code from write_conf() was ignored, therefore
even in case of some error we were still getting the message

	Saved parameters for CT NNN

and 0 exit code from vzctl.

Fix that, and introduce yet another exit code (139) for this particular
error. Number 139 is chosen for compatibility with Parallels Containers.

Man page is updated accordingly.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -722,6 +722,8 @@ Error setting veth interface
 Error setting container name
 .IP 133
 Waiting for container start failed
+.IP 139
+Error saving container configuration file
 .SH EXAMPLES
 To create and start "basic" container with ID of 1000 using
 \fIfedora-core-5\fR OS template and IP address of 192.168.10.200:
