vzctl restart: make it understand all 'start' and 'stop' options
(1) Functions parse_start_opt() and parse_stop_opt() were combined
    into single parse_startstop_opt() which is also used for "restart".
(2) vps_restart function removed
(3) restart() now uses start() and stop() so (almost) no logic duplication
(4) "vzctl restart" now accepts and honors all the start and stop options.
(5) Document that fact in man/vzctl.8
(6) Modify bash completion script to provide possible completions for
    start, stop, and restart options (previously only stop --fast was
    working).

http://bugzilla.openvz.org/653

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -571,6 +571,7 @@ inside a container; option \fB--fast\fR makes \fBvzctl\fR use
 unclean container shutdown.
 .IP \fBrestart\fR 4
 Restarts a container, i.e. stops it if it is running, and starts again.
+Accepts all the \fBstart\fR and \fBstop\fR options.
 .IP \fBstatus\fR 4
 Shows a container status. This is a line with five words separated by spaces.
 First word is literally \fBCTID\fR. Second word is the numeric \fICT ID\fR.
