Add new global variable ERROR_ON_ARPFAIL
vzctl have a functionality to check all IPs to be added to a container
for collisions, i.e. for each address it checks if there is such an
address on the network (by sending a broadcast ARP request). If it gets
a positive reply (i.e. there is such an IP already) it prints a warning.

Now with this patch and "ERROR_ON_ARPFAIL" set to "yes" vzctl errors
out in case an IP address is found. This can be unwanted in some
network setups so we keep the old behaviour by default.

Based on patch from Konstantin Pavlov <thresh@altlinux.org>

http://bugzilla.openvz.org/919

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vz.conf.5
+++ b/man/vz.conf.5
@@ -58,6 +58,10 @@ which interfaces to use to query/announce ARP. If this is set to \fBdetect\fR,
 the right network interface (the one which is in the same subnet as a CT IP)
 will be chosen automatically. Any other value restores old (as of vzctl 3.0.19
 or older) behavior, when all the possible interfaces were used.
+.IP \fBERROR_ON_ARPFAIL\fR=\fByes\fR|\fBno\fR
+In case the value of this parameter is set to \fByes\fR, vzctl will fail to
+start a container if there is another host with the same IP in the subnet.
+The value of \fBno\fR makes vzctl to only print the warning.
 .IP \fBTEMPLATE\fR=\fIdirectory\fR
 Value of this parameter is a directory in which all container template data are
 stored.
