--- a/man/vps.conf.5
+++ b/man/vps.conf.5
@@ -1,8 +1,8 @@
-.TH vps.conf 5 "22 Feb 2008" "OpenVZ" "Containers"
+.TH vps.conf 5 "9 Nov 2009" "OpenVZ" "Containers"
 .SH NAME
 vps.conf \- configuration file for an OpenVZ container.
 .SH SYNOPSIS
-/etc/vz/conf/XXX.conf
+\fB/etc/vz/conf/\fICTID\fB.conf\fR
 .SH DESCRIPTION
 This is a configuration file for a container. It is stored as
 \fB/etc/vz/conf/\fR\fICTID\fB.conf\fR, where \fICTID\fR
@@ -16,10 +16,8 @@ All parameter names and values are case-sensitive. Quotes surrounding a
 \fIvalue\fR are required if value contains spaces, and are optional otherwise.
 Extra spaces are not allowed. All unrecognized lines will be ignored.
 .PP
-Please note that the file is created/modified by the \fBvzctl(8)\fR command with the \fIset --save\fR arguments, therefore changes to this file made otherwise than by \fBvzctl(8)\fR can be lost during the next \fBvzctl\fR run.
-.PP
-The meaning of each parameter is described in \fBvzctl(8)\fR, so here only
-the appropriate \fBvzctl set\fR option is given.
+The meaning of most parameters are described in \fBvzctl\fR(8), so here only
+the appropriate \fBvzctl set\fR option names are given.
 .SS Miscellaneous parameters
 .IP \fBNAME\fR="\fIvename\fR"
 Corresponds to the \fB--name\fR option.
@@ -44,68 +42,68 @@ Name of container sample config which the container is based on.
 Set to \fByes\fR if the container config was modified.
 .SS Resource management parameters
 .IP \fBNUMPROC\fR
-Corresponds to the \fB--numproc\fR options.
+Corresponds to the \fB--numproc\fR option.
 .IP \fBNUMFILE\fR
-Corresponds to the \fB--numfile\fR options.
+Corresponds to the \fB--numfile\fR option.
 .IP \fBNUMFLOCK\fR
-Corresponds to the \fB--numflock\fR options.
+Corresponds to the \fB--numflock\fR option.
 .IP \fBNUMPTY\fR
-Corresponds to the \fB--numpty\fR options.
+Corresponds to the \fB--numpty\fR option.
 .IP \fBNUMSIGINFO\fR
-Corresponds to the \fB--numsiginfo\fR options.
+Corresponds to the \fB--numsiginfo\fR option.
 .IP \fBNUMTCPSOCK\fR
-Corresponds to the \fB--numtcpsock\fR options.
+Corresponds to the \fB--numtcpsock\fR option.
 .IP \fBNUMOTHERSOCK\fR
-Corresponds to the \fB--numothersock\fR options.
+Corresponds to the \fB--numothersock\fR option.
 .IP \fBPRIVVMPAGES\fR
-Corresponds to the \fB--privvmpages\fR options.
+Corresponds to the \fB--privvmpages\fR option.
 .IP \fBVMMGUARPAGES\fR
-Corresponds to the \fB--vmguarpages\fR options.
+Corresponds to the \fB--vmguarpages\fR option.
 .IP \fBOOMGUARPAGES\fR
-Corresponds to the \fB--oomguarpages\fR options.
+Corresponds to the \fB--oomguarpages\fR option.
 .IP \fBLOCKEDPAGES\fR
-Corresponds to the \fB--lockedpages\fR options.
+Corresponds to the \fB--lockedpages\fR option.
 .IP \fBSHMPAGES\fR
-Corresponds to the \fB--shmpages\fR options.
+Corresponds to the \fB--shmpages\fR option.
 .IP \fBKMEMSIZE\fR
-Corresponds to the \fB--kmemsize\fR options.
+Corresponds to the \fB--kmemsize\fR option.
 .IP \fBTCPSNDBUF\fR
-Corresponds to the \fB--tcpsndbuf\fR options.
+Corresponds to the \fB--tcpsndbuf\fR option.
 .IP \fBTCPRCVBUF\fR
-Corresponds to the \fB--tcprcvbuf\fR options.
+Corresponds to the \fB--tcprcvbuf\fR option.
 .IP \fBOTHERSOCKBUF\fR
-Corresponds to the \fB--othersockbuf\fR options.
+Corresponds to the \fB--othersockbuf\fR option.
 .IP \fBDGRAMRCVBUF\fR
-Corresponds to the \fB--dgramrcvbuf\fR options.
+Corresponds to the \fB--dgramrcvbuf\fR option.
 .IP \fBDCACHESIZE\fR
-Corresponds to the \fB--dcachesize\fR options.
+Corresponds to the \fB--dcachesize\fR option.
 .IP \fBNUMIPTENT\fR
-Corresponds to the \fB--numiptent\fR options.
+Corresponds to the \fB--numiptent\fR option.
 .IP \fBCPUUNITS\fR
 Corresponds to the \fB--cpuunits\fR option.
 .IP \fBDISKSPACE\fR="\fIsoftlimit\fR[:\fIhardlimit\fR]"
-Corresponds to the \fB--diskspace\fR parameter.
+Corresponds to the \fB--diskspace\fR option.
 .IP \fBDISKINODES\fR="\fIsoftlimit\fR[:\fIhardlimit\fR]"
-Corresponds to the \fB--diskinodes\fR parameter.
+Corresponds to the \fB--diskinodes\fR option.
 .IP \fBQUOTATIME\fR="\fIseconds\fR"
-Corresponds to the \fB--quotatime\fR parameter.
+Corresponds to the \fB--quotatime\fR option.
 .IP \fBQUOTAUGIDLIMIT\fR="\fInum\fR"
-Corresponds to the \fB--quotaugidlimit\fR parameter.
+Corresponds to the \fB--quotaugidlimit\fR option.
 .IP \fBNOATIME\fR="\fByes\fR|\fBno\fR"
 Corresponds to the \fB--noatime\fR option.
 .IP \fBCAPABILITY\fR="\fIcapname\fR:\fBon\fR|\fBoff\fR\ [...]"
-Corresponds to the \fB--capability\fR option
+Corresponds to the \fB--capability\fR option.
 .SS Network related parameters
-.IP \fBIP_ADDRESS\fR="\fIaddress\ [address]\fR"
+.IP \fBIP_ADDRESS\fR="\fIaddress\fR\ [\fIaddress\fR\ ...]"
 Specifies the \fIaddress\fR the container will be assigned. Several addresses
 are divided by spaces.
 Corresponds to the \fB--ipadd\fR option.
 .IP \fBHOSTNAME\fR="\fIname\fR"
 Corresponds to the \fB--hostname\fR option.
-.IP \fBNAMESERVER\fR="\fIip\fR\ [\fIip\fR]"
+.IP \fBNAMESERVER\fR="\fIip\fR\ [\fIip\fR\ ...]"
 Corresponds to the \fB--nameserver\fR option. Several name server addresses
 are divided by spaces.
-.IP \fBSEARCHDOMAIN\fR="\fIdomain\fR\ [\fIdomain\fR]"
+.IP \fBSEARCHDOMAIN\fR="\fIdomain\fR\ [\fIdomain\fR\ ...]"
 Corresponds to the \fB--searchdomain\fR option. Several search domains
 are divided by spaces.
 .SH SEE ALSO
