vzlist: add swappages support
Commit 6b819fb60634a109200b7a749aa40d595fcd4895 added support
for swappages parameter, but we forgot to add it to vzlist. Do it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -1,4 +1,4 @@
-.TH vzlist 8 "22 Feb 2008" "OpenVZ" "Containers"
+.TH vzlist 8 "11 Nov 2009" "OpenVZ" "Containers"
 .SH NAME
 vzlist \- containers listing utility
 .SH SYNOPSIS
@@ -172,6 +172,11 @@ numiptent.m	NIPTENT.M
 numiptent.b	NIPTENT.B
 numiptent.l	NIPTENT.L
 numiptent.f	NIPTENT.F
+swappages	SWAPP
+swappages.m	SWAPP.M
+swappages.b	SWAPP.B
+swappages.l	SWAPP.L
+swappages.f	SWAPP.F
 diskspace	DQBLOCKS
 diskspace.s	DQBLOCKS.S
 diskspace.h	DQBLOCKS.H
