vzlist: add 'onboot' field
Now vzlist is able to print the value of CT's ONBOOT parameter
("yes" or "no").

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -1,4 +1,4 @@
-.TH vzlist 8 "11 Nov 2009" "OpenVZ" "Containers"
+.TH vzlist 8 "17 Nov 2009" "OpenVZ" "Containers"
 .SH NAME
 vzlist \- containers listing utility
 .SH SYNOPSIS
@@ -186,6 +186,7 @@ diskinodes.h	DQINODES.H
 laverage	LAVERAGE
 cpulimit	CPULIM
 cpuunits	CPUUNI
+onboot		ONBOOT
 .TE
 .P
 For example:
