man/vzlist.8: fix SYNOPSYS
- reorder the options
- mark -a and -S as exclusive
- add -d option
- fix typesetting (not break into many lines)

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -1,11 +1,11 @@
-.TH vzlist 8 "17 Nov 2009" "OpenVZ" "Containers"
+.TH vzlist 8 "27 Nov 2009" "OpenVZ" "Containers"
 .SH NAME
 vzlist \- containers listing utility
 .SH SYNOPSIS
-vzlist [\fB-a\fR] [\fB-o\fR \fIname\fR[,\fIname\fR...]]
- [\fB-s\fR [\fB-\fR]\fIname\fR] [\fB-h\fR \fIpattern\fR]
- [\fB-H\fR] [\fB-S\fR] [\fB-n\fR] [\fB-N\fR \fI-pattern\fR]
- [\fICTID\fR [\fICTID\fR ...] | \fB-1\fR]
+vzlist [\fB-a\fR|\fB-S\fR] [\fB-n\fR] [\fB-H\fR] \
+[\fB-o\fR \fIname\fR[,\fIname\fR...]] [\fB-s\fR [\fB-\fR]\fIname\fR] \
+[\fB-h\fR \fIpattern\fR] [\fB-N\fR \fIpattern\fR] [\fB-d\fR \fIpattern\fR] \
+[\fICTID\fR [\fICTID\fR ...] | \fB-1\fR]
 .PP
 vzlist \fB-L\fR
 .SH DESCRIPTION
