--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -13,40 +13,45 @@ This utility is used for listing containers and their parameters.
 By default only running containers are listed.
 If one or more \fICTID\fRs are specified, only specified containers are
 displayed. CTID of \fB-1\fR is used to output CT IDs only, one per line.
+.PP
+For the fields that can have many values (e.g. \fBip\fR),
+all the values are displayed only for the last (i.e. leftmost) column;
+otherwise, only the first value is shown.
 .SH OPTIONS
 .IP "\fB-a\fR, \fB--all\fR"
-list all containers.
-.IP "\fB-o\fR, \fB--output\fR \fIname\fR[,\fIname\fR...]"
-display only parameters specified by \fIname\fRs (see \fBSTANDARD FORMAT
-SPECIFIERS\fR below).
-.IP "\fB-s\fR, \fB--sort\fR [\fB-\fR]\fIname\fR"
-specify sorting order. The \fB-\fR before parameter means
-sorting in reverse order.
-.IP "\fB-h\fR, \fB--hostname\fR \fIpattern\fR"
-display only containers whose hostnames matches the \fIpattern\fR.
-The following wildcard characters can be used: \fB*\fR, \fB?\fR, \fB[]\fR.
-Note that wildcard characters should be properly escaped
-to avoid expansion by shell.
-.IP "\fB-d\fR, \fB--description\fR \fIpattern\fR"
-display only containers with descriptions matching the \fIpattern\fR.
-The following wildcard characters can be used: \fB*\fR, \fB?\fR, \fB[]\fR.
-Note that wildcard characters should be properly escaped
-to avoid expansion by shell.
-.IP "\fB-n\fR, \fB--name\fR"
-display container names instead of hostnames.
-.IP "\fB-N\fR, \fB--name_filter\fR \fIpattern\fR"
-display only containers whose names matches the \fIpattern\fR. See
-\fB--hostname\fR for \fIpattern\fR description.
-.IP "\fB-H\fR, \fB--no-header\fR"
-suppress displaying header.
+List all containers.
 .IP "\fB-S\fR, \fB--stopped\fR"
-list only stopped containers.
+List only stopped containers.
+.IP "\fB-n\fR, \fB--name\fR"
+Display container names instead of hostnames.
+.IP "\fB-H\fR, \fB--no-header\fR"
+Suppress displaying the header row.
+.IP "\fB-o\fR, \fB--output\fR \fIfield\fR[,\fIfield\fR...]"
+Display only the specified \fIfield\fRs (see \fBSTANDARD FIELDS\fR
+subsection below).
+.IP "\fB-s\fR, \fB--sort\fR [\fB-\fR]\fIfield\fR"
+Sort by the value of \fIfield\fR (possible arguments are the same
+as for \fB-o\fR). The \fB-\fR before the field name means sorting
+in the reverse order.
+.SS Output filters
+List of CTs can be further filtered using the following options.
+For patterns one can use the same wildcards as in shell
+(i.e. \fB*\fR, \fB?\fR, and \fB[]\fR).
+Note: to avoid expansion of wildcards by the shell, one have to escape
+the pattern by either putting it into single quotes (like \fB'a*a'\fR)
+or by adding a backslash before the wildcard character (like \fBa\\*a\fR).
+.IP "\fB-h\fR, \fB--hostname\fR \fIpattern\fR"
+List only containers whose hostnames matches the \fIpattern\fR.
+.IP "\fB-N\fR, \fB--name_filter\fR \fIpattern\fR"
+List only containers whose names matches the \fIpattern\fR.
+.IP "\fB-d\fR, \fB--description\fR \fIpattern\fR"
+List only containers with descriptions matching the \fIpattern\fR.
+.SS Possible fields
 .IP "\fB-L\fR, \fB--list\fR"
 list all available format specifiers.
-
-.SS STANDARD FORMAT SPECIFIERS
-These may be used to control both output format (\fB-o\fR, \fB--output\fR)
-and sorting (\fB-s\fR, \fB--sort\fR).
+.SS STANDARD FIELDS
+These may be used to control both output (\fB-o\fR, \fB--output\fR)
+and the sorting order (\fB-s\fR, \fB--sort\fR).
 .TS
 allbox center;
 lB lB
@@ -189,9 +194,7 @@ cpuunits	CPUUNI
 onboot	ONBOOT
 bootorder	BOOTORDER
 .TE
-.P
-For example:
-.br
+.SH EXAMPLES
 \f(CW	vzlist -o ctid,kmemsize,kmemsize.l -s kmemsize\fR
 .SH RETURN CODE
 Returns 0 upon success.
