man/vzctl.8: a couple of minor formatting fixes
1. In EXAMPLES section: same indentation for text (.P was missing)
2. In FILES section: do not put \f... formatting on a separate line,
   otherwise an extra unwanted space is added to the beginning of the
   text.

Signed-off-by: Kir Kolyshkin <kir@openvz,org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -750,8 +750,8 @@ To create and start "basic" container with ID of 1000 using
 \f(CR	vzctl set 1000 --ipadd 192.168.10.200 --save
 .br
 \f(CR	vzctl start 1000
-.br
 \fR
+.P
 To set number of processes barrier/limit to 80/100, and
 PTY barrier/limit to 16/20 PTYs:
 .br
@@ -779,8 +779,7 @@ To permanently remove this container:
 \fR
 .SH FILES
 .ad l
-\fB\f(CR
-/etc/vz/vz.conf
+\fB\f(CR/etc/vz/vz.conf
 .br
 /etc/vz/conf/\fICTID\fB\f(CR.conf
 .br
