--- a/man/vzcalc.8
+++ b/man/vzcalc.8
@@ -1,8 +1,8 @@
-.TH vzcalc 8 "22 Feb 2008" "OpenVZ" "Containers"
+.TH vzcalc 8 "10 Dec 2009" "OpenVZ" "Containers"
 .SH NAME
 vzcalc \- utility to calculate the container's resources usage.
 .SH SYNOPSIS
-vzcalc [\fB-v\fR] <\fBvpsid\fR>
+vzcalc [\fB-v\fR] \fICTID\fR
 .SH OPTIONS
 .IP \fB-v\fR 4
 Display additional information.
