--- a/man/vzsplit.8
+++ b/man/vzsplit.8
@@ -1,4 +1,4 @@
-.TH vzsplit 8 "22 Feb 2008" "OpenVZ" "Containers"
+.TH vzsplit 8 "10 Dec 2009" "OpenVZ" "Containers"
 .SH NAME
 vzsplit \- generate a sample container configuration file with a certain set of system resource control parameters.
 .SH SYNOPSIS
@@ -29,7 +29,7 @@ Specify the configuration file name. The program output is placed to
 \fB-s\fR \fIswapsize\fR
 Specify the swap size in Kbytes. If not provided in the option, the swap size will be read from /proc/meminfo.
 .SH DIAGNOSTICS
-\fBvzsplit\fR returns 0 upon a sucessful execution. If anything goes wrong, it
+\fBvzsplit\fR returns 0 upon a successful execution. If anything goes wrong, it
 returns 1.
 .SH SEE ALSO
 .BR vps.conf (5).
