man/vzctl.8: minor formatting fix
Use bold for literals, italic for placeholders, normal for other text.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -493,9 +493,9 @@ designated by its \fImajor\fR and \fIminor\fR numbers. Device file have to be cr
 .TP
 \fBFeatures management\fR
 .TP
-\fB--features\fR \fIname\fR:\fBon|off\fR
+\fB--features\fR \fIname\fB:on\fR|\fBoff\fR
 Enable or disable a specific container feature.
-Known features are: \fIsysfs\fR, \fInfs\fR, \fIsit\fR, \fIipip\fR, \fIppp\fR.
+Known features are: \fBsysfs\fR, \fBnfs\fR, \fBsit\fR, \fBipip\fR, \fBppp\fR.
 
 .TP
 \fBApply config\fR
