man/vzctl.8: document ipgre and bridge features.
Commit 7e9e9f9c42e4afa2fdc2e5cd45acef418c0156f8 added support for
ipgre and bridge features. Document it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -495,7 +495,8 @@ designated by its \fImajor\fR and \fIminor\fR numbers. Device file have to be cr
 .TP
 \fB--features\fR \fIname\fB:on\fR|\fBoff\fR
 Enable or disable a specific container feature.
-Known features are: \fBsysfs\fR, \fBnfs\fR, \fBsit\fR, \fBipip\fR, \fBppp\fR.
+Known features are: \fBsysfs\fR, \fBnfs\fR, \fBsit\fR, \fBipip\fR, \fBppp\fR,
+\fBipgre\fR, \fBbridge\fR.
 
 .TP
 \fBApply config\fR
